name:                forms-applicative
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mstksg/forms-applicative#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Form
                       Control.Alternative.Free.Lawless
  build-depends:       base >= 4.7 && < 5
                     , text
                     , vector-sized
                     , finite-typelits
                     , kan-extensions
                     , singletons
                     , transformers
                     , haskeline
                     , free
                     , recursion-schemes
                     , yaml
                     , aeson
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall

-- executable forms-applicative-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , forms-applicative
--   default-language:    Haskell2010

-- test-suite forms-applicative-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , forms-applicative
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/forms-applicative
